<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/version_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/version_label"
            style="@style/TextView.OptionLabel"
            app:layout_constraintHorizontal_weight="@dimen/option_label_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/version"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="v1.0.0.1"
            style="@style/TextView.SubOptionValue"
            app:layout_constraintHorizontal_weight="@dimen/option_value_weight"
            app:layout_constraintStart_toEndOf="@+id/version_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_interval_size"
        app:layout_constraintTop_toBottomOf="@+id/layout_version"
        app:layout_constraintBottom_toTopOf="@+id/Scan_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/connect_state_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/connection_state_label"
            style="@style/TextView.OptionLabel"
            app:layout_constraintHorizontal_weight="@dimen/option_label_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/connect_state"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/connection_state_disconnected"
            style="@style/TextView.SubOptionValue"
            app:layout_constraintHorizontal_weight="@dimen/option_value_weight"
            app:layout_constraintStart_toEndOf="@+id/connect_state_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/Scan_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/widget_interval_size"
        android:background="@drawable/bg_list_view"
        app:layout_constraintTop_toBottomOf="@+id/layout_status"
        app:layout_constraintBottom_toTopOf="@id/layout_control"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_interval_size"
        app:layout_constraintTop_toBottomOf="@+id/Scan_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inventory_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/count_layout_padding"
            android:background="@drawable/bg_count"
            app:layout_constraintHorizontal_weight="@dimen/control_count_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layout_buttons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/all_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                tools:text="0"
                android:textSize="@dimen/all_count_text_size"
                android:textColor="@color/all_count_text_color"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/overlap_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/overlap_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tools:text="0"
                android:textColor="@color/count_text_color"
                android:textStyle="bold"
                android:textSize="@dimen/count_text_size"
                app:layout_constraintTop_toBottomOf="@+id/all_count"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/widget_interval_size"
            app:layout_constraintHorizontal_weight="@dimen/control_button_weight"
            app:layout_constraintStart_toEndOf="@+id/inventory_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/action_scan"
                style="@style/Button.Action"
                android:layout_width="match_parent"
                android:text="@string/action_scan"
                app:layout_constraintBottom_toTopOf="@+id/layout_option_buttons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_option_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/action_scan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/action_clear"
                    android:layout_width="0dp"
                    android:text="@string/action_clear"
                    style="@style/Button.Option"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/action_symbol"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/action_symbol"
                    android:layout_width="0dp"
                    android:text="@string/action_symbol"
                    style="@style/Button.Option"
                    app:layout_constraintStart_toEndOf="@+id/action_clear"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>